fix: adjust footer menu positioning and visibility for improved accessibility

--- a/styles.css
+++ b/styles.css
@@ -713,10 +713,9 @@ footer {
             flex-direction: column;
             justify-content: flex-start;
             top: 0;
-            right: 0;
+            right: -100%;
             height: 100%;
-            width: 0%;
-            visibility: hidden;
+            width: 80%;
             padding: 1rem;
             z-index: 1000;
             overflow-x: auto;
@@ -730,6 +729,7 @@ footer {
                 font-size: 2rem;
                 align-self: flex-start;
                 cursor: pointer;
+                margin-bottom: 1.5rem;
             }
 
             & a {
@@ -750,8 +750,7 @@ footer {
             }
 
             &.active {
-                width: 80%;
-                visibility: visible;
+                right: 0;
             }
         }
 
